Fixed the alignment.

--- a/frontend/wsdl-wyh/src/assets/main.css
+++ b/frontend/wsdl-wyh/src/assets/main.css
@@ -56,10 +56,6 @@
   bottom: 5px;
 }
 
-.character-trope-img {
-  height: auto;
-}
-
 .trope-link {
   color: black;
   text-decoration: none;
@@ -73,8 +69,9 @@
 #cy {
   width: 100%;
   height: 600px;
+  padding: 0px;
   display: block;
-  margin: 25px 25px 25px -10px;
+  margin: 0px;
   border: 0.3px solid #ccc;
   box-shadow: 0 0 10px #ccc;
 }
@@ -239,3 +236,4 @@
 .ldio-yxsjncmm31 div {
   box-sizing: content-box;
 }
+
